# edugit

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE
docs/: build.md
src/: CMakeLists.txt  hello.cc
